--- a/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
+++ b/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
@@ -3,5 +3,6 @@
                     >
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="OneDayPassengerFlowTrend.xaml"/>
+        <ResourceDictionary Source="MoreDayPassengerFlowTrend.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
