--- a/src/Hjmos.BaseControls/Themes/Styles/ProgressBar.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ProgressBar.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Hjmos.BaseControls.Themes.Styles">
+                     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Base/ProgressBarBaseStyle.xaml"/>
@@ -8,6 +8,10 @@
 
 
     <Style TargetType="ProgressBar" BasedOn="{StaticResource ProgressBarBaseStyle}">
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}"/>
+    </Style>
+
+    <Style TargetType="controls:InfoProgressBar" BasedOn="{StaticResource InfoProgressBarStyle}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}"/>
     </Style>
     
