--- a/src/Hjmos.BaseControls/Themes/Styles/Base/ProgressBarBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/ProgressBarBaseStyle.xaml
@@ -132,7 +132,7 @@
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="{Binding AWidth,RelativeSource={RelativeSource TemplatedParent}}"/>
+                            <ColumnDefinition Width="{Binding BarWidth,RelativeSource={RelativeSource TemplatedParent}}"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock x:Name="Title" Grid.Column="0"  Grid.Row="0" Text="{TemplateBinding Title}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0" Foreground="{TemplateBinding TitleForeground}" FontSize="{TemplateBinding TitleFontSize}"/>
@@ -157,8 +157,7 @@
                                 <Border x:Name="Bd" Background="#CFFFFFFF" CornerRadius="3" Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <StackPanel>
                                         <TextBlock HorizontalAlignment="Center" Margin=" 5,0,5,0"
-                                                   Text="{Binding Title}" FontWeight="Bold"
-                                                   />
+                                                   Text="{Binding Title}" FontWeight="Bold"/>
                                         <StackPanel Orientation="Horizontal">
                                             <Ellipse Width="12" Height="12" Fill="{TemplateBinding Foreground}"/>
                                             <TextBlock VerticalAlignment="Center" Margin="5,2" Text="当前值:"/>
@@ -178,10 +177,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-
-
-
-
-
 </ResourceDictionary>
