--- a/src/Hjmos.CustomCharts/Themes/Styles/AverageDailyPassengerFlowTop10.xaml
+++ b/src/Hjmos.CustomCharts/Themes/Styles/AverageDailyPassengerFlowTop10.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:Hjmos.CustomCharts.Controls"
-                    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls">
+                    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
+                    xmlns:local="clr-namespace:Hjmos.CustomCharts">
 
 
     <Style TargetType="ListBoxItem" x:Key="ListBoxItemVerticalStyle">
@@ -45,7 +46,7 @@
         </Setter>
         <Setter Property="ItemTemplate">
             <Setter.Value>
-                <DataTemplate DataType="{x:Type controls:FlowData}">
+                <DataTemplate DataType="{x:Type local:FlowData}">
                     <hj:InfoProgressBar  BarWidth="{Binding Width}" ActualValue="{Binding RealTimeValue}" Maximum="{Binding PostValue}" Title="{Binding Title}"/>
                 </DataTemplate>
             </Setter.Value>
