--- a/src/Hjmos.BaseControls/Themes/Styles/Base/ListBoxBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/ListBoxBaseStyle.xaml
@@ -147,6 +147,38 @@
         </Setter>
     </Style>
 
+
+    <Style x:Key="ListBoxBaseStyle" TargetType="ListBox">
+        <Setter Property="Background" Value="{DynamicResource RegionBrush}"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="controls:ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="controls:ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
+        <Setter Property="controls:ScrollViewer.CanContentScroll" Value="true"/>
+        <Setter Property="controls:ScrollViewer.PanningMode" Value="Both"/>
+        <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxItemBaseStyle}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBox">
+                    <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                        <controls:ScrollViewer Focusable="false">
+                            <ItemsPresenter Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </controls:ScrollViewer>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    
+    
+    
+    
+
     <Style TargetType="ListBoxItem" BasedOn="{StaticResource ListBoxItemBaseStyle}" x:Key="ListBoxItemSingle">
         <Setter Property="controls:ListBoxAttach.ItemCornerRadius" Value="5"/>
     </Style>
@@ -170,7 +202,7 @@
 
     <tools:ListBoxItemStyleSelector x:Key="listboxitemStyleSelector"/>
 
-    <Style x:Key="ListBoxBaseStyle" TargetType="controls:ListBox">
+    <Style x:Key="ListBoxNewBaseStyle" TargetType="controls:ListBox">
         <Setter Property="ItemContainerStyleSelector" Value="{StaticResource listboxitemStyleSelector}"/>
         <Setter Property="Background" Value="{DynamicResource RegionBrush}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
