--- a/src/Hjmos.CommonControls/Themes/Styles/TrainCongestionStatus.xaml
+++ b/src/Hjmos.CommonControls/Themes/Styles/TrainCongestionStatus.xaml
@@ -1,5 +1,70 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Hjmos.CommonControls.Themes.Styles">
+                    xmlns:controls="clr-namespace:Hjmos.CommonControls.Controls"
+                    xmlns:local="clr-namespace:Hjmos.CommonControls"
+                    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls">
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../Basic/Converters.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    
+    
+    <Style TargetType="ListBoxItem" x:Key="ListBoxItemHorizontalStyle">
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Margin" Value="2"/>
+        <Setter Property="Width" Value="60"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBoxItem">
+                    <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                            Padding="{TemplateBinding Padding}" SnapsToDevicePixels="True">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="Center" SnapsToDevicePixels="True"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+        
+    <Style TargetType="controls:TrainCongestionStatus">
+        <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxItemHorizontalStyle}"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="ItemsPanel">
+            <Setter.Value>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:TrainCongestionStatus">
+                    <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <StackPanel Orientation="Horizontal">
+                            <!--<Border Background="Red" Width="60" Height="50"/>-->
+                            <ItemsPresenter Margin="5,0,5,0" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            <!--<Border Background="Red" Width="60" Height="50"/>-->
+                        </StackPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate DataType="{x:Type local:TrainCongestionData}" >
+                    <hj:SvgBox  ImageSource="{Binding ConfestionStatus,Converter={StaticResource Confestion2SourceConverter}}"/>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     
 </ResourceDictionary>
