大数据控件设计以及图片加载控件

--- a/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
+++ b/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
@@ -5,5 +5,6 @@
         <ResourceDictionary Source="OneDayPassengerFlowTrend.xaml"/>
         <ResourceDictionary Source="MoreDayPassengerFlowTrend.xaml"/>
         <ResourceDictionary Source="AverageDailyPassengerFlowTop10.xaml"/>
+        <ResourceDictionary Source="BigDataMonitor.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
