--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -22,5 +22,6 @@
         <ResourceDictionary Source="RadioButton.xaml"/>
         <ResourceDictionary Source="ButtonGroup.xaml"/>
         <ResourceDictionary Source="ProgressBar.xaml"/>
+        <ResourceDictionary Source="ImageViewer.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
